REGRESSION (r291302): editing/secure-input tests fail when run while a password input is focused on the system https://bugs.webkit.org/show_bug.cgi?id=241324 rdar://94184618

Reviewed by Alexey Proskuryakov.

The tests in `editing/secure-input` fail after the removal of `WebCoreTestShim` in r291302, if a
secure text field is focused anywhere on the system while the tests are running. This is because we
now call into the real system `IsSecureEventInputEnabled()` API during these tests, instead of the
shimmed version for testing.

Since interposing these API functions apparently doesn't work on M1 Macs, we can't use this
technique to ensure that these tests are robust moving forward; instead, introduce and use testing-
only SPI (and IPI) to consult whether or not we're currently editing a secure input.

See below for more details.

* Source/WebKit/UIProcess/API/mac/WKWebViewPrivateForTestingMac.h:
* Source/WebKit/UIProcess/API/mac/WKWebViewTestingMac.mm:
(-[WKWebView _secureEventInputEnabledForTesting]):

Add testing-only SPI on WKWebView to return whether or not we're in a secure input, as an
alternative to calling into the actual `IsSecureEventInputEnabled()` API.

* Source/WebKitLegacy/WebKitLegacy.xcodeproj/project.pbxproj:
* Source/WebKitLegacy/mac/WebView/WebHTMLView.mm:
(-[WebHTMLView _secureEventInputEnabledForTesting]):
* Source/WebKitLegacy/mac/WebView/WebHTMLViewForTestingMac.h: Copied from Source/WebKit/UIProcess/API/mac/WKWebViewPrivateForTestingMac.h.

Add a testing-only header file that's internal (i.e. non-exported), but imported in DumpRenderTree
through a Source-relative header include path. At the moment, this only contains a method to check
whether or not we're currently editing a secure text input, as an alternative to calling into
`IsSecureEventInputEnabled()`.

* Tools/DumpRenderTree/TestRunner.cpp:
(getSecureEventInputIsEnabledCallback):
(TestRunner::isSecureEventInputEnabled const):

Adjust DumpRenderTree to consult `-[WebHTMLView _secureEventInputEnabledForTesting]`.

* Tools/DumpRenderTree/TestRunner.h:
* Tools/DumpRenderTree/mac/Configurations/Base.xcconfig:

Add a relative include path on DumpRenderTree, so that we can use `WebHTMLViewForTestingMac.h` in
DumpRenderTree without having to introduce new WebKitLegacy SPI.

* Tools/DumpRenderTree/mac/TestRunnerMac.mm:
(TestRunner::isSecureEventInputEnabled const):
* Tools/WebKitTestRunner/PlatformWebView.h:
(WTR::PlatformWebView::platformView const):
(WTR::PlatformWebView::platformWindow const):
(WTR::PlatformWebView::platformView): Deleted.
(WTR::PlatformWebView::platformWindow): Deleted.

Mark `platformView` const so that it can be invoked from `isSecureEventInputEnabled`, and also mark
`platformWindow` const for consistency.

* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):
* Tools/WebKitTestRunner/gtk/PlatformWebViewGtk.cpp:
(WTR::PlatformWebView::isSecureEventInputEnabled const):
* Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(WTR::PlatformWebView::isSecureEventInputEnabled const):
* Tools/WebKitTestRunner/libwpe/PlatformWebViewLibWPE.cpp:
(WTR::PlatformWebView::isSecureEventInputEnabled const):
* Tools/WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::isSecureEventInputEnabled const):

Add a new `isSecureEventInputEnabled` method on the `PlatformWebView`, and adjust WebKitTestRunner
to consult `-[WKWebView _secureEventInputEnabledForTesting]`.

* Tools/WebKitTestRunner/win/PlatformWebViewWin.cpp:
(WTR::PlatformWebView::isSecureEventInputEnabled const):

Canonical link: https://commits.webkit.org/251336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295290 268f45cc-cd09-0410-ab3c-d52691b4dbfc