Source/WebKit/UIProcess/API/mac/WKWebViewTestingMac.mm
@@ -133,6 +133,11 @@
     });
 }
 
+- (BOOL)_secureEventInputEnabledForTesting
+{
+    return _impl->inSecureInputState();
+}
+
 @end
 
 #endif // PLATFORM(MAC)
