Tools/WebKitTestRunner/libwpe/PlatformWebViewLibWPE.cpp
@@ -157,4 +157,9 @@ void PlatformWebView::setEditable(bool)
 {
 }
 
+bool PlatformWebView::isSecureEventInputEnabled() const
+{
+    return false;
+}
+
 } // namespace WTR
